// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CampaignWallChartV2 characterization > all-unassigned: no placements at all 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "Unassigned in Employer",
    "Union member (other union)",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (3) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "12 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=12",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > default: structural skeleton 1`] = `
"<div>
  <div>
    <div>
    <p>
  <div>
    <div aria-hidden="true">
    <div data-wall-chart-toolbar="true">
      <div>
        <div>
          <div>
            <div>
              <div>
          <div>
            <div>
              <h2>
              <p>
            <div>
              <div>
              <div>
              <button aria-pressed="false">
              <div>
        <div>
          <div>
            <div aria-label="Rating distribution">
              <div>
              <div>
              <div>
              <div>
              <div>
            <div>
              <span>
              <span>
              <span>
            <div>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
            <div>
              <span>
            <div>
              <span>
              <span>
              <span>
    <div>
      <div>
        <div>
          <div>
            <div data-ou-id="11">
              <div>
            <div data-ou-id="12">
              <div>
            <div data-ou-id="unassigned">
              <div>
      <div>
        <div>
          <div>
            <div>
            <div>
              <div>
              <button aria-label="Expand assessment distribution">
          <div>
            <div>
              <h4>
              <div>
    <button>"
`;

exports[`CampaignWallChartV2 characterization > default: writable, hints dismissed, no query string (first group) 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit)",
    "Select all in South Deck",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "South Deck",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (3) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit) | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "3 in unit · 2 not yet in a sub-unit / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=33%",
        "Em=0%",
        "Lead=1:3",
        "Members=67%",
        "OA Members=67%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=33%",
        "HSRs=33%",
        "Bargaining reps=0%",
        "Avg rating=3.5",
        "Participation (supportive)=0%",
        "Workers=3",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (33%) | Rating 4–5: 1 (33%) | Unrated: 1 (33%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in South Deck | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 2 est.",
      "level": 1,
      "metrics": [
        "Ph=0%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=100%",
        "Bargaining reps=0%",
        "Avg rating=4.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 4–5: 1 (100%)",
      "tiles": [
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "13",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
      ],
      "title": "South Deck",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "7 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=86%",
        "Em=57%",
        "Lead=1:7",
        "Members=71%",
        "OA Members=57%",
        "Delegates=14%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=14%",
        "MUA=1",
        "Avg rating=3.0",
        "Participation (supportive)=14%",
        "Workers=7",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (14%) | Rating 3: 1 (14%) | Rating 4–5: 1 (14%) | Unrated: 4 (57%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=4",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:4",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > hidden-unit: one unit hidden by the stored prefs document 1`] = `
{
  "a11y": [
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit)",
    "Select all in South Deck",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "South Deck",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Cara Carter:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (2/3) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit) | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "3 in unit · 2 not yet in a sub-unit / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=33%",
        "Em=0%",
        "Lead=1:3",
        "Members=67%",
        "OA Members=67%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=33%",
        "HSRs=33%",
        "Bargaining reps=0%",
        "Avg rating=3.5",
        "Participation (supportive)=0%",
        "Workers=3",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (33%) | Rating 4–5: 1 (33%) | Unrated: 1 (33%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in South Deck | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 2 est.",
      "level": 1,
      "metrics": [
        "Ph=0%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=100%",
        "Bargaining reps=0%",
        "Avg rating=4.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 4–5: 1 (100%)",
      "tiles": [
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "13",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
      ],
      "title": "South Deck",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "7 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=86%",
        "Em=57%",
        "Lead=1:7",
        "Members=71%",
        "OA Members=57%",
        "Delegates=14%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=14%",
        "MUA=1",
        "Avg rating=3.0",
        "Participation (supportive)=14%",
        "Workers=7",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (14%) | Rating 3: 1 (14%) | Rating 4–5: 1 (14%) | Unrated: 4 (57%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=3",
    "top-level-units=2",
    "tiles=10",
    "placeholders=1",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:3",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > hint-visible: group-selector hint not yet dismissed 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit)",
    "Select all in South Deck",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "South Deck",
    "Unassigned in Employer",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:visible dismiss=[Got it]",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (3) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit) | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "3 in unit · 2 not yet in a sub-unit / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=33%",
        "Em=0%",
        "Lead=1:3",
        "Members=67%",
        "OA Members=67%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=33%",
        "HSRs=33%",
        "Bargaining reps=0%",
        "Avg rating=3.5",
        "Participation (supportive)=0%",
        "Workers=3",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (33%) | Rating 4–5: 1 (33%) | Unrated: 1 (33%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in South Deck | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 2 est.",
      "level": 1,
      "metrics": [
        "Ph=0%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=100%",
        "Bargaining reps=0%",
        "Avg rating=4.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 4–5: 1 (100%)",
      "tiles": [
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "13",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
      ],
      "title": "South Deck",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "7 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=86%",
        "Em=57%",
        "Lead=1:7",
        "Members=71%",
        "OA Members=57%",
        "Delegates=14%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=14%",
        "MUA=1",
        "Avg rating=3.0",
        "Participation (supportive)=14%",
        "Workers=7",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (14%) | Rating 3: 1 (14%) | Rating 4–5: 1 (14%) | Unrated: 4 (57%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=4",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:4",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > nested: the campaign-42 shape, Worksite (wp2.4c.md §4.3) 1`] = `
{
  "a11y": [
    "Barrow",
    "Barrow Jetty",
    "Campaign summary",
    "Colour by",
    "Day",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "Ichthys",
    "KGP",
    "MUA: Maritime Union",
    "Night",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Alan Ashby. Click to select an assessment and rating.",
    "Quick-rate Bea Boyd. Click to select an assessment and rating.",
    "Quick-rate Cal Curtis. Click to select an assessment and rating.",
    "Quick-rate Dev Dutta. Click to select an assessment and rating.",
    "Quick-rate Ella Ellis. Click to select an assessment and rating.",
    "Quick-rate Fred Falk. Click to select an assessment and rating.",
    "Quick-rate Gita Gupta. Click to select an assessment and rating.",
    "Quick-rate Hal Hobbs. Click to select an assessment and rating.",
    "Quick-rate Ivy Ingram. Click to select an assessment and rating.",
    "Quick-rate Priya Patel. Click to select an assessment and rating.",
    "Quick-rate Quentin Quinn. Click to select an assessment and rating.",
    "Quick-rate Rosa Ramirez. Click to select an assessment and rating.",
    "Quick-rate Sam Singh. Click to select an assessment and rating.",
    "Quick-rate Tara Thomas. Click to select an assessment and rating.",
    "Quick-rate Umar Usman. Click to select an assessment and rating.",
    "Quick-rate Vera Vance. Click to select an assessment and rating.",
    "Quick-rate Will Wong. Click to select an assessment and rating.",
    "Quick-rate Xena Xu. Click to select an assessment and rating.",
    "Quick-rate Yuri Young. Click to select an assessment and rating.",
    "Quick-rate Zoe Zhang. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Barrow",
    "Select all in Barrow Jetty",
    "Select all in Day",
    "Select all in Ichthys",
    "Select all in KGP's own area (7 in unit · 3 not yet in a sub-unit)",
    "Select all in Night",
    "Select all in Unassigned in Worksite",
    "Select all in Wheatstone",
    "Show empty units",
    "Unassigned in Worksite",
    "Union member (other union)",
    "Unit actions",
    "Wheatstone",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Alan Ashby:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (7) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=50%",
        "Em=35%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=80%",
        "Delegates=15%",
        "Activists=15%",
        "Contacts=15%",
        "HSRs=10%",
        "Bargaining reps=10%",
        "MUA=4",
        "Avg rating=2.9",
        "Participation=20%",
        "Workers=20",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 3 (15%) | Rating 2: 3 (15%) | Rating 3: 3 (15%) | Rating 4–5: 5 (25%) | Unrated: 6 (30%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in KGP's own area (7 in unit · 3 not yet in a sub-unit) | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "7 in unit · 3 not yet in a sub-unit / 9 est.",
      "level": 0,
      "metrics": [
        "Ph=43%",
        "Em=43%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=86%",
        "Delegates=14%",
        "Activists=14%",
        "Contacts=29%",
        "HSRs=0%",
        "Bargaining reps=14%",
        "MUA=1",
        "Avg rating=2.8",
        "Participation (supportive)=29%",
        "Workers=7",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 1: 1 (14%) | Rating 2: 1 (14%) | Rating 3: 1 (14%) | Rating 4–5: 2 (29%) | Unrated: 2 (29%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Alan Ashby. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "212 Alan Ashby",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ivy Ingram. Cumulative 4, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "220 Ivy Ingram",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Rosa Ramirez. Cumulative —, last activity —. Background uses default 1 (leadership) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "203 Rosa Ramirez",
        },
      ],
      "title": "KGP",
      "type": "Worksite",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Day | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 1,
      "metrics": [
        "Ph=100%",
        "Em=100%",
        "Lead=1:1",
        "Members=100%",
        "OA Members=50%",
        "Delegates=50%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=2.5",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 1: 1 (50%) | Rating 4–5: 1 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Bea Boyd. Cumulative 4, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "213 Bea Boyd",
        },
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Priya Patel. Cumulative 1, last activity 1. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "201 Priya Patel",
        },
      ],
      "title": "Day",
      "type": "Shift",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Night | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 1,
      "metrics": [
        "Ph=0%",
        "Em=50%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.5",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 2: 1 (50%) | Rating 3: 1 (50%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "21",
          "selected": false,
          "title": "Quentin Quinn. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "202 Quentin Quinn",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "21",
          "selected": false,
          "title": "Sam Singh. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "204 Sam Singh",
        },
      ],
      "title": "Night",
      "type": "Shift",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Barrow | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "3 named / 5 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=0%",
        "Lead=1:3",
        "Members=100%",
        "OA Members=100%",
        "Delegates=33%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=67%",
        "Bargaining reps=33%",
        "Avg rating=4.5",
        "Participation (supportive)=0%",
        "Workers=3",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 4–5: 2 (67%) | Unrated: 1 (33%)",
      "tiles": [
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Cal Curtis. Cumulative 5, last activity 2. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "214 Cal Curtis",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Dev Dutta. Cumulative —, last activity —. Background uses default 1 (leadership) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "215 Dev Dutta",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "11",
          "selected": false,
          "title": "Tara Thomas. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "205 Tara Thomas",
        },
      ],
      "title": "Barrow",
      "type": "Worksite",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Ichthys | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=50%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=0%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=50%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=2",
        "Avg rating=1.0",
        "Participation (supportive)=0%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 1: 1 (50%) | Unrated: 1 (50%)",
      "tiles": [
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Ella Ellis. Cumulative 1, last activity 3. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "216 Ella Ellis",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "12",
          "selected": false,
          "title": "Umar Usman. Cumulative —, last activity —. Background uses default 1 (leadership) for colour only. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "206 Umar Usman",
        },
      ],
      "title": "Ichthys",
      "type": "Worksite",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Wheatstone | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "2 named / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=50%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.5",
        "Participation (supportive)=50%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 2: 1 (50%) | Rating 4–5: 1 (50%)",
      "tiles": [
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "13",
          "selected": false,
          "title": "Fred Falk. Cumulative 2, last activity 4. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "217 Fred Falk",
        },
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "13",
          "selected": false,
          "title": "Vera Vance. Cumulative 5, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "207 Vera Vance",
        },
      ],
      "title": "Wheatstone",
      "type": "Worksite",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Barrow Jetty | pressed=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 2 est.",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=1:1",
        "Members=100%",
        "OA Members=0%",
        "Delegates=0%",
        "Activists=100%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "14",
          "selected": false,
          "title": "Zoe Zhang. Cumulative 3, last activity 4. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "211 Zoe Zhang",
        },
      ],
      "title": "Barrow Jetty",
      "type": "Worksite",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Worksite | pressed=false",
      ],
      "header": "5 named · 4 unfilled",
      "level": 0,
      "metrics": [
        "Ph=40%",
        "Em=40%",
        "Lead=1:3",
        "Members=100%",
        "OA Members=100%",
        "Delegates=20%",
        "Activists=20%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=20%",
        "Workers=5",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (20%) | Rating 2: 1 (20%) | Rating 3: 1 (20%) | Unrated: 2 (40%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gita Gupta. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "218 Gita Gupta",
        },
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hal Hobbs. Cumulative 3, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "219 Hal Hobbs",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Will Wong. Cumulative 1, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "208 Will Wong",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Xena Xu. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "209 Xena Xu",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Yuri Young. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "210 Yuri Young",
        },
      ],
      "title": "Unassigned in Worksite",
      "type": null,
    },
  ],
  "controls": [
    "Worksite (5 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=8",
    "top-level-units=6",
    "tiles=20",
    "placeholders=9",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","1,10,11,12,13,20,21,14,90"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","1,10,11,12,13,20,21,14,90"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:8",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > no-groups: the whole membership as one flat grid 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Not in any group",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Not in any group",
    "Show empty units",
    "Union member (other union)",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked | disabled",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "New unit",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Not in any group | pressed=false",
      ],
      "header": "12 named",
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Not in any group",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=12",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > not-in-any-group: ?group=none 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "No email. Open worker details, focus email.",
    "Not in any group",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Select all in Not in any group",
    "Show empty units",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked | disabled",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "New unit",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Not in any group | pressed=false",
      ],
      "header": "2 named",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=50%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=50%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=50%",
        "Avg rating=2.0",
        "Participation (supportive)=50%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (50%) | Rating 3: 1 (50%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Not in any group",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=2",
    "placeholders=0",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChartV2 characterization > read-only: canWrite false 1`] = `
{
  "a11y": [
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Colour by",
    "Expand assessment distribution",
    "Group",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email.",
    "No phone.",
    "Petition ask",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Select all in Acme North",
    "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit)",
    "Select all in South Deck",
    "Select all in Unassigned in Employer",
    "Show empty units",
    "South Deck",
    "Unassigned in Employer",
    "Union member (other union)",
    "email on file.",
    "phone on file.",
  ],
  "anchors": [
    "wall_chart_group_selector@none:hidden",
    "wall_chart_rating@Ben Baker:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Group | expanded=false | state=closed",
        "Show empty units | state=unchecked",
        "Colour by | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Units (3) | expanded=false | state=closed",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme North | pressed=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
      ],
      "header": "2 named / 4 est.",
      "level": 0,
      "metrics": [
        "Ph=0%",
        "Em=100%",
        "Lead=1:2",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=50%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=2.0",
        "Participation (supportive)=100%",
        "Workers=2",
      ],
      "overflow": null,
      "placeholders": 2,
      "ratingsBar": "Rating 2: 2 (100%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "11",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "11",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3.",
          "worker": "107 Gina Grant",
        },
      ],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Acme South's own area (3 in unit · 2 not yet in a sub-unit) | pressed=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
      ],
      "header": "3 in unit · 2 not yet in a sub-unit / 3 est.",
      "level": 0,
      "metrics": [
        "Ph=33%",
        "Em=0%",
        "Lead=1:3",
        "Members=67%",
        "OA Members=67%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=33%",
        "HSRs=33%",
        "Bargaining reps=0%",
        "Avg rating=3.5",
        "Participation (supportive)=0%",
        "Workers=3",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (33%) | Rating 4–5: 1 (33%) | Unrated: 1 (33%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "12",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "12",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —.",
          "worker": "108 Hugo Hall",
        },
      ],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in South Deck | pressed=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
      ],
      "header": "1 named / 2 est.",
      "level": 1,
      "metrics": [
        "Ph=0%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=100%",
        "Bargaining reps=0%",
        "Avg rating=4.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 1,
      "ratingsBar": "Rating 4–5: 1 (100%)",
      "tiles": [
        {
          "badge": "HSR",
          "disabled": true,
          "draggable": false,
          "ouId": "13",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative.",
          "worker": "104 Dan Dawson",
        },
      ],
      "title": "South Deck",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Select all in Unassigned in Employer | pressed=false",
      ],
      "header": "7 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=86%",
        "Em=57%",
        "Lead=1:7",
        "Members=71%",
        "OA Members=57%",
        "Delegates=14%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=14%",
        "MUA=1",
        "Avg rating=3.0",
        "Participation (supportive)=14%",
        "Workers=7",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (14%) | Rating 3: 1 (14%) | Rating 4–5: 1 (14%) | Unrated: 4 (57%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "MUA",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —.",
          "worker": "111 Kim King",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned in Employer",
      "type": null,
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=4",
    "top-level-units=3",
    "tiles=12",
    "placeholders=3",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-groups","1"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["user-campaign-prefs","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:4",
    "charts",
    "dialogs:none",
  ],
}
`;
